﻿- Add 'Instant Plopping' option for growables
- Add 'Disable Zone Check' option for growables
- Add 'Ignore low land value complaint' option
- Add 'Ignore too few services complaint' option
- Building icons in ploppable panel now sorted by display name
- Fix building selection not updating when info panel button pressed


Version 2.3 BETA

- Transition to on-demand thumbnail generation
- Add submesh and sub-building rendering to preview images
- Tweak thumbnail lighting and angles slightly
- Add BuildingLoaded Harmony Postfix patch to attempt to catch and reset and RICO residentials with zero CitizenUnits
- Stop attempting to remove existing (non-RICO) building UI buttons on game load
- Remove existing (non-RICO) building UI buttons (if any) when settings are applied live
- Add jp,  ru, tr translations


Version 2.2.3

- Add additional public method calls for interfacing with other mods
- Move all inter-mod public methods to new Interfaces class
- Update translation framework
- Overhaul XML settings file handling


Version 2.2.2

- Add manual translation selection option
- Update translation framework to latest version with improved fallback language detection
- Allow for longer translation strings in dropdown menu widths
- Overhaul thumbnail background option choices; now a dropdown (color, plain, skybox)
- Memory management: delay generating thumbnails until actually in-game
- Memory management: don't generate disabled thumbnails
- Regenerating thumbnails now does only that (leaves the rest of the button alone)
- Standardise exception logging


Version 2.2.1

- 2.2 UI speed bost function is now optional (trading off UI performance for game speed)
- Add external interface for other mods to determine whether or not this mod is managing a given prefab
- Tweak settings panel layout to accomodate longer translation strings
- Correct error in zh-tw PRR_UIC_OIL translation 


Version 2.2
